Вернуть api-tests.yml